# zepico_ws2812b

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ws2812b.c  ws2812b.pio
docs/: CMakeLists.txt
example/: CMakeLists.txt  dynamic.c  parallel.c  static.c
include/zepico/: ws2812b.h
